edited laods of things dont even remember, fixed the spacing, the navbar, made the cool hover transition for gallery selection, and other stuff - ah yes, also the page snap for artist index

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,5 +1,9 @@
 .page-container {
-  padding-top: 80px;
+  position: absolute;
+  z-index: -1;
+  padding-top: 100px;
+  width: 100vw;
+  // height: 100vh;
 }
 
 #user-page-header {
